# spotterapi

./: Cargo.toml  configuration.yaml  sqlx-data.json
migrations/: 20230706145854_create_sighting_table.sql  20230706145854_initial.sql
scripts/: init_db.sh
src/: api_types.rs  configuration.rs  main.rs
src/routes/: get.rs  post.rs
