[package]
name = "spotter-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros"] }
chrono = "0.4.26"
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
ulid = "1.0.0"
